# StupidLearning

./: CMakeLists.txt  README.md
src/commands/: commands_manager.cpp  commands_manager.h
src/core/: client.cpp  client.h  main.cpp  settings.cpp  settings.h
src/events/: event_listener.cpp  event_listener.h
